# OpenCvJniDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/houshuai/opencvjnidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: dynamic-class-announce.h  dynamic-deal-head.h  dynamic-deal.cpp  int-deal-head.h  int-deal.cpp  lang.h  log.h  state-deal-header.h  state-deal.cpp
app/src/main/java/com/example/houshuai/opencvjnidemo/: MainActivity.java
app/src/main/java/com/example/houshuai/opencvjnidemo/bitmap_state/: BitmapStateActivity.java  BitmapStateJni.java
app/src/main/java/com/example/houshuai/opencvjnidemo/dynamic/: DynamicActivity.java  DynamicJni.java
app/src/main/java/com/example/houshuai/opencvjnidemo/dynamic/impl/: CameraVersionOneModle.java
app/src/main/java/com/example/houshuai/opencvjnidemo/dynamic/intel/: IFaceRecognitionListener.java
app/src/main/java/com/example/houshuai/opencvjnidemo/int_state/: IntActivity.java  IntJni.java
app/src/main/java/com/example/houshuai/opencvjnidemo/state/: StateActivity.java  StateJni.java
app/src/main/res/drawable/: state_button_background.xml
app/src/main/res/layout/: acticity_dymic_deal.xml  acticity_int_deal.xml  acticity_state_deal.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/houshuai/opencvjnidemo/: ExampleUnitTest.java
